# FerrumClient

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_STATUS.md  CONTRIBUTING.md  Cargo.toml  FINAL_STATUS.md  HANDOFF.md  LICENSE  Makefile  PERFORMANCE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  clippy.toml  config.toml  deny.toml  test_entity_sync.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
ferrum/: Cargo.toml
ferrum-assets/: Cargo.toml
ferrum-assets/src/: jar.rs  lib.rs  mojang.rs  prismarine.rs
ferrum-assets/tests/: asset_manager.rs
ferrum-config/: Cargo.toml
ferrum-config/src/: lib.rs
ferrum-config/tests/: config.rs
ferrum-core/: Cargo.toml
ferrum-core/src/: lib.rs
ferrum-entity/: Cargo.toml
ferrum-entity/src/: entity.rs
ferrum-inventory/: Cargo.toml
ferrum-inventory/src/: combat.rs  crafting.rs  inventory.rs  item_stack.rs  lib.rs  slot.rs
ferrum-inventory/tests/: combat.rs  crafting.rs  inventory.rs
ferrum-meshing-cpu/: Cargo.toml
ferrum-meshing-cpu/benches/: chunk_meshing.rs
ferrum-meshing-cpu/src/: binary_greedy.rs  lib.rs
ferrum-meshing-cpu/tests/: binary_greedy.rs
ferrum-meshing-gpu/: Cargo.toml
ferrum-meshing-gpu/benches/: chunk_meshing.rs
ferrum-meshing-gpu/src/: compute.wgsl  lib.rs
ferrum-meshing-gpu/tests/: compute_meshing.rs
ferrum-physics/: Cargo.toml
ferrum-physics/src/: collision.rs  gravity.rs  lib.rs  movement.rs  player.rs
ferrum-physics/tests/: physics.rs
ferrum-protocol/: Cargo.toml
ferrum-protocol/src/: lib.rs
ferrum-protocol/tests/: packets.rs
ferrum-render/: Cargo.toml
ferrum-render/src/: block_renderer.rs  lib.rs  lighting.rs  lod.rs  texture_atlas.rs
ferrum-render/tests/: lighting.rs  rendering.rs
ferrum-subprocess/: Cargo.toml
ferrum-subprocess/src/: lib.rs
ferrum-subprocess/tests/: lifecycle.rs
ferrum-world/: Cargo.toml
ferrum-world/src/: block_interaction.rs  chunk.rs  compressed.rs  lib.rs  world.rs
ferrum-world/tests/: interaction.rs
ferrum/src/: block_interact.rs  chat.rs  death_screen.rs  entity_renderer.rs  hud.rs  inventory_screen.rs  lib.rs  main.rs  menu.rs  particles.rs  player_controller.rs  screenshot.rs  settings_screen.rs  sky.rs  sounds.rs  texture_loader.rs  textures.rs  title_screen.rs  weather.rs
ferrum/src/network/: chunk_loader.rs  connection.rs  entity_sync.rs  handshake.rs  login.rs  mod.rs  persistent_connection.rs  player_position.rs
ferrum/tests/: chunk_loading.rs  entity_sync.rs  integration.rs  network.rs  player_position.rs
scripts/: benchmark.sh  build.sh  check.sh  clean.sh  clippy.sh  coverage.sh  doc.sh  fmt.sh  install-deps.sh  run.sh  test-linux.sh  test-windows.ps1
