[workspace]
members = [
    "ferrum-core",
    "ferrum-protocol",
    "ferrum-meshing-cpu",
    "ferrum-meshing-gpu",
    "ferrum-render",
    "ferrum-world",
    "ferrum-physics",
    "ferrum-entity",
    "ferrum-inventory",
    "ferrum-assets",
    "ferrum-config",
    "ferrum-subprocess",
    "ferrum",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
bevy = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
criterion = "0.5"
