[package]
name = "ferrum-meshing-gpu"
version = "0.1.0"
edition = "2024"
description = "GPU compute shader greedy meshing for voxel chunks"

[dependencies]
wgpu = "28.0.0"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"

[[bench]]
name = "chunk_meshing"
harness = false
